--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "minimist": ">=1.2.3"
   },
   "dependencies": {}
 }
